force-app/main/default/objects/CMIT08_Matched_Delivery__mdt/CMIT08_Matched_Delivery__mdt.object-meta.xml
<CustomObject>
    <label>Matched Delivery</label>
    <pluralLabel>Matched Deliveries</pluralLabel>
</CustomObject>