force-app/main/default/objects/CMIT08_Matched_Delivery__mdt/fields/IT_Branch__c.field-meta.xml
<CustomField>
    <fullName>IT_Branch__c</fullName>
    <label>Branch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>