force-app/main/default/objects/CMIT08_Matched_Delivery__mdt/fields/IT_Delivery_Value__c.field-meta.xml
<CustomField>
    <fullName>IT_Delivery_Value__c</fullName>
    <label>Delivery Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>