force-app/main/default/objects/CMIT08_Matched_Delivery__mdt/fields/IT_Provider__c.field-meta.xml
<CustomField>
    <fullName>IT_Provider__c</fullName>
    <label>Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>